# workshop_spatial

./: Dockerfile  Handout.md  README.md  pyproject.toml
notebooks/: README.md  Session_2_Preprocessing.ipynb  Session_4_Neighborhood_Enrichment.ipynb
notebooks/optional/: Spatial Autocorrelation.ipynb
